    - Implemented ["pyqpp/qpp_wrapper_cpp"] (pyqpp Python wraper)
          set_prng_seed() - sets the seed of the PRNG to a specific value, or,
                            if invoked with no argument, to a random value
    - Migrated pyqpp installation method to pyproject.toml
    - Extensive code refactoring, transitioned qpp::QCircuit logic to
      std::visit() over std::variant
    - API changes, all functions with "name" and "shift" defaulted empty/zeroed
      arguments are now wrapped in std::optional<>

Version 4.0.1 - 2 April 2023
    - This is a maintenance release with minor changes
    - Updated pybind11 to version 2.10.4
    - Bugfix in qpp::QFT()/TFQ() when applied to density matrices

Version 4.0 - 20 March 2023
    - Major performance improvement in qpp::QEngine::execute(), which now takes
      a second default argument 'bool try_sampling = true'; if possible, the
      engine will sample from the output of the circuit instead of executing
      the measurement steps.
    - API changes in ["classes/circuits/circuits.hpp"], renamed:
          qpp::QCircuit::gate_joint()  -> qpp::QCircuit::gate()
          qpp::QCircuit::CTRL_joint()  -> qpp::QCircuit::CTRL()
          qpp::QCircuit::cCTRL_joint() -> qpp::QCircuit::cCTRL()
          qpp::QCircuit::CTRL()        -> qpp::QCircuit::CTRL_fan()
          qpp::QCircuit::cCTRL()       -> qpp::QCircuit::cCTRL_fan()
          qpp::QCircuit::measureZ()    -> qpp::QCircuit::measure()
    - API changes in qpp::QCircuit::measure() for multiple qudits, now the
          results are stored sequentially (instead as a decimal representation
          of the multi-index)
    - API changes in qpp::measure_seq(), now, as part of its return tuple,
          returns the full list of outcome probabilities
    - API changes for
          qpp::QCircuit::get_gate_count()
          qpp::QCircuit::get_gate_depth()
          qpp::QCircuit::get_measurement_count()
          qpp::QCircuit::get_measurement_depth()